  to False due to ticket #370 (right way).

- Improvements and fixes on Firebird reflection:
  . FBDialect now mimics OracleDialect, regarding case-sensitivity of TABLE and
    COLUMN names (see 'case_sensitive remotion' topic on this current file).
  . FBDialect.table_names() doesn't bring system tables (ticket:796).
  . FB now reflects Column's nullable property correctly.

- Fixed three- and multi-level select and deferred inheritance loading
  (i.e. abc inheritance with no select_table), [ticket:795]

- Ident passed to id_chooser in shard.py always a list.

- The no-arg ResultProxy._row_processor() is now the class attribute
  `_process_row`.

- Added support for returning values from inserts and udpates for
  PostgreSQL 8.2+. [ticket:797]

- PG reflection, upon seeing the default schema name being used explicitly
  as the "schema" argument in a Table, will assume that this is the the 
  user's desired convention, and will explicitly set the "schema" argument
  in foreign-key-related reflected tables, thus making them match only
  with Table constructors that also use the explicit "schema" argument
  (even though its the default schema).  
  In other words, SA assumes the user is being consistent in this usage.
  
- fixed sqlite reflection of BOOL/BOOLEAN [ticket:808]

- null foreign key on a m2o doesn't trigger a lazyload [ticket:803]

- oracle does not implicitly convert to unicode for non-typed result
  sets (i.e. when no TypeEngine/String/Unicode type is even being used;
  previously it was detecting DBAPI types and converting regardless).
  should fix [ticket:800]

- fix to anonymous label generation of long table/column names [ticket:806]

- Firebird dialect now uses SingletonThreadPool as poolclass.

- Firebird now uses dialect.preparer to format sequences names

- Fixed breakage with postgres and multiple two-phase transactions. Two-phase
  commits and and rollbacks didn't automatically end up with a new transaction